add acr fn